--- a/src/main/resources/templates/pak/pak.html
+++ b/src/main/resources/templates/pak/pak.html
@@ -1,10 +1,37 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="container pak_wrapper">
+    	<div class="row pak_header">
+    		<div class="col pak_header_left">
+    			<div class="row">
+    				<div class="col">대한민국 구석구석 떠나세요!</div>
+    				<div class="col">여행상품 홍보관</div>
+    				<div class="col"><input type="search" placeholder="원하는 여행 상품을 찾아보세요."/></div>
+    			</div>
+    			<div class="row">
+    				<div class="col">어디로, 언제 떠나시나요?</div>
+    				<div class="col"><input type="search" placeholder="어디로 여행가세요?"/></div>
+    				<div class="col"><input type="search" placeholder="여행 일정도 추가 할래요!"/></div>
+    			</div>
+    			<div class="row">
+    				<div class="col">이런 여행 테마는 어때요?</div>
+    				<div class="col"><button>#겨울여행추천</button><button>#반려동물_동반</button></div>
+    				<div class="col"></div>
+    			</div>
+    		</div>
+    		<div class="col pak_header_right"></div>
+    	</div>
+    </div>
+    
+    
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  </body>
 </html>
