Docs : feed 부분 html, css 추가

--- a/src/main/resources/templates/css/common.css
+++ b/src/main/resources/templates/css/common.css
@@ -9,9 +9,11 @@
 
 /* color palette*/
 :root{
-    --black : #fffff;
-    --deepgray : #f0f0f0;
+    --white : #ffffff;
+    --beige : #DDCBBE;
     --gray : #f7f7f7;
+    --deepgray : #f0f0f0;
+    --black : #000000;
 }
 
 /* font size */
