--- a/src/main/resources/templates/feed/feed.html
+++ b/src/main/resources/templates/feed/feed.html
@@ -1,10 +1,286 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!--Masonry-->
+    <!--[REF.] https://getbootstrap.kr/docs/5.2/examples/masonry/-->
+    <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
+            integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous"
+            async></script>
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/feed.css">
 </head>
 <body>
+<div class="container pt-4 px-4">
+    <span class="me-4">추천</span>
+    <span>팔로잉</span>
+</div>
+<hr>
+<div id="feed" class="container-fluid mt-4 mb-5">
+    <!--filtering-->
+    <div class="container feed-filter my-3 px-3 ms-sm-2">
+        <button type="button" class="btn rounded-pill btn-dark me-2">전체</button>
+        <button type="button" class="btn rounded-pill btn-light me-2">테마여행 🌴</button>
+        <button type="button" class="btn rounded-pill btn-light me-2">지역 🗺️</button>
+    </div>
+    <!--feed box Parent-->
+    <div class="row d-flex justify-content-center mt-3">
+        <!--feed box Start-->
+        <div class="col-3 feed-box my-2 mx-2 px-0">
+            <!--feed box top-->
+            <div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
+                <div class="col">
+                    <img src="img/user_rabbit.jpg" class="float-start rounded-circle border me-3" width="50" height="50"
+                         alt="">
+                    <!--feed box text-->
+                    <div>
+                        <span class="float-start fw-bold f15">박검지</span><br>
+                        <span class="float-start text-muted f13">하이라이트</span>
+                        <span class="float-start text-muted f13 ms-3 ">2시간 전</span>
+                    </div>
+                </div>
+                <div class="col-3 d-flex justify-content-end align-items-center pe-2">
+                    <button type="button" class="btn btn-sm btn-dark">전체</button>
+                    <span class="mx-2 f17">⋮</span>
+                </div>
+            </div>
+            <!--feed box center | image-->
+            <div class="col-12 feed-box-center mt-3 d-flex align-items-center overflow-hidden">
+                <img src="img/beer.jpg" alt="content" class="img-fluid">
+            </div>
+            <!--feed-box-bot | text-->
+            <div class="col-12 feed-box-bot p-3">
+                <span class="fw-bold mb-1">맥주 맛집🍺✨</span>
+                <span class="f13">
+          맥주는 왜 먹어도 먹어도 맛있을까요?
+        </span>
+            </div>
+            <!--feed box bot | text-->
+            <div class="col-12 feed-box-bot hstack p-3 border-top text-muted f13">
+                <div class="col-6 hstack justify-content-center border-end">
+                    <span>담기</span>
+                </div>
+                <div class="col-6 hstack justify-content-center">
+                    <i class="bi bi-heart"></i>
+                    <span>좋아요</span>
+                    <span class="ms-2">9999+</span>
+                </div>
+            </div>
+        </div>
+        <!---------------------------------------------------------------------------->
+        <div class="col-3 feed-box my-2 mx-2 px-0">
+            <!--feed box top-->
+            <div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
+                <div class="col">
+                    <img src="img/user_rabbit1.jpg" class="float-start rounded-circle border me-3" width="50" height="50"
+                         alt="">
+                    <!--feed box text-->
+                    <div>
+                        <span class="float-start fw-bold f15">박검지</span><br>
+                        <span class="float-start text-muted f13">하이라이트</span>
+                        <span class="float-start text-muted f13 ms-3 ">2시간 전</span>
+                    </div>
+                </div>
+                <div class="col-3 d-flex justify-content-end align-items-center pe-2">
+                    <button type="button" class="btn btn-sm btn-dark">전체</button>
+                    <span class="mx-2 f17">⋮</span>
+                </div>
+            </div>
+            <!--feed box center | image-->
+            <div class="col-12 feed-box-center mt-3 d-flex align-items-center overflow-hidden">
+                <img src="img/cebu.jpg" alt="content" class="img-fluid">
+            </div>
+            <!--feed-box-bot | text-->
+            <div class="col-12 feed-box-bot p-3">
+                <span class="fw-bold mb-1">🌺🌴 IN CEBU 🌴🌺</span>
+                <span class="f13">
+          맥주는 왜 먹어도 먹어도 맛있을까요?
+          어떤 맥주 좋아하세요? 저는 부드러운게 좋아요
+          그래서 생맥주가 좋아요 여기는 세부인데요
+          진짜 잘 찍었죠 진짜 제가 찍은 거예요 또 가고 싶어요
+          취업도 안 했는데 놀러 갈 생각하는 나 정상인가요?
+          비정상이여도 제 마음이 그런데 어떡해요
+        </span>
+            </div>
+            <!--feed box bot | text-->
+            <div class="col-12 feed-box-bot hstack p-3 border-top text-muted f13">
+                <div class="col-6 hstack justify-content-center border-end">
+                    <span>담기</span>
+                </div>
+                <div class="col-6 hstack justify-content-center">
+                    <i class="bi bi-heart"></i>
+                    <span>좋아요</span>
+                    <span class="ms-2">9999+</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-3 feed-box my-2 mx-2 px-0">
+            <!--feed box top-->
+            <div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
+                <div class="col">
+                    <img src="img/user_rabbit.jpg" class="float-start rounded-circle border me-3" width="50" height="50"
+                         alt="">
+                    <!--feed box text-->
+                    <div>
+                        <span class="float-start fw-bold f15">박검지</span><br>
+                        <span class="float-start text-muted f13">하이라이트</span>
+                        <span class="float-start text-muted f13 ms-3 ">2시간 전</span>
+                    </div>
+                </div>
+                <div class="col-3 d-flex justify-content-end align-items-center pe-2">
+                    <button type="button" class="btn btn-sm btn-dark">전체</button>
+                    <span class="mx-2 f17">⋮</span>
+                </div>
+            </div>
+            <!--feed box center | image-->
+            <div class="col-12 feed-box-center mt-3 d-flex align-items-center overflow-hidden">
+                <img src="img/beer.jpg" alt="content" class="img-fluid">
+            </div>
+            <!--feed-box-bot | text-->
+            <div class="col-12 feed-box-bot p-3">
+                <span class="fw-bold mb-1">맥주 맛집🍺✨</span>
+                <span class="f13">맥주는 왜 먹어도 먹어도 맛있을까요?</span>
+            </div>
+            <!--feed box bot | text-->
+            <div class="col-12 feed-box-bot hstack p-3 border-top text-muted f13">
+                <div class="col-6 hstack justify-content-center border-end">
+                    <span>담기</span>
+                </div>
+                <div class="col-6 hstack justify-content-center">
+                    <i class="bi bi-heart"></i>
+                    <span>좋아요</span>
+                    <span class="ms-2">9999+</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-3 feed-box my-2 mx-2 px-0">
+            <!--feed box top-->
+            <div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
+                <div class="col">
+                    <img src="img/user_rabbit.jpg" class="float-start rounded-circle border me-3" width="50" height="50"
+                         alt="">
+                    <!--feed box text-->
+                    <div>
+                        <span class="float-start fw-bold f15">박검지</span><br>
+                        <span class="float-start text-muted f13">하이라이트</span>
+                        <span class="float-start text-muted f13 ms-3 ">2시간 전</span>
+                    </div>
+                </div>
+                <div class="col-3 d-flex justify-content-end align-items-center pe-2">
+                    <button type="button" class="btn btn-sm btn-dark">전체</button>
+                    <span class="mx-2 f17">⋮</span>
+                </div>
+            </div>
+            <!--feed box center | image-->
+            <div class="col-12 feed-box-center mt-3 d-flex align-items-center overflow-hidden">
+                <img src="img/beer.jpg" alt="content" class="img-fluid">
+            </div>
+            <!--feed-box-bot | text-->
+            <div class="col-12 feed-box-bot p-3">
+                <span class="fw-bold mb-1">맥주 맛집🍺✨</span>
+                <span class="f13">맥주는 왜 먹어도 먹어도 맛있을까요?</span>
+            </div>
+            <!--feed box bot | text-->
+            <div class="col-12 feed-box-bot hstack p-3 border-top text-muted f13">
+                <div class="col-6 hstack justify-content-center border-end">
+                    <span>담기</span>
+                </div>
+                <div class="col-6 hstack justify-content-center">
+                    <i class="bi bi-heart"></i>
+                    <span>좋아요</span>
+                    <span class="ms-2">9999+</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-3 feed-box my-2 mx-2 px-0">
+            <!--feed box top-->
+            <div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
+                <div class="col">
+                    <img src="img/user_rabbit.jpg" class="float-start rounded-circle border me-3" width="50" height="50"
+                         alt="">
+                    <!--feed box text-->
+                    <div>
+                        <span class="float-start fw-bold f15">박검지</span><br>
+                        <span class="float-start text-muted f13">하이라이트</span>
+                        <span class="float-start text-muted f13 ms-3 ">2시간 전</span>
+                    </div>
+                </div>
+                <div class="col-3 d-flex justify-content-end align-items-center pe-2">
+                    <button type="button" class="btn btn-sm btn-dark">전체</button>
+                    <span class="mx-2 f17">⋮</span>
+                </div>
+            </div>
+            <!--feed box center | image-->
+            <div class="col-12 feed-box-center mt-3 d-flex align-items-center overflow-hidden">
+                <img src="img/beer.jpg" alt="content" class="img-fluid">
+            </div>
+            <!--feed-box-bot | text-->
+            <div class="col-12 feed-box-bot p-3">
+                <span class="fw-bold mb-1">맥주 맛집🍺✨</span>
+                <span class="f13">맥주는 왜 먹어도 먹어도 맛있을까요?</span>
+            </div>
+            <!--feed box bot | text-->
+            <div class="col-12 feed-box-bot hstack p-3 border-top text-muted f13">
+                <div class="col-6 hstack justify-content-center border-end">
+                    <span>담기</span>
+                </div>
+                <div class="col-6 hstack justify-content-center">
+                    <i class="bi bi-heart"></i>
+                    <span>좋아요</span>
+                    <span class="ms-2">9999+</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-3 feed-box my-2 mx-2 px-0">
+            <!--feed box top-->
+            <div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
+                <div class="col">
+                    <img src="img/user_rabbit.jpg" class="float-start rounded-circle border me-3" width="50" height="50"
+                         alt="">
+                    <!--feed box text-->
+                    <div>
+                        <span class="float-start fw-bold f15">박검지</span><br>
+                        <span class="float-start text-muted f13">하이라이트</span>
+                        <span class="float-start text-muted f13 ms-3 ">2시간 전</span>
+                    </div>
+                </div>
+                <div class="col-3 d-flex justify-content-end align-items-center pe-2">
+                    <button type="button" class="btn btn-sm btn-dark">전체</button>
+                    <span class="mx-2 f17">⋮</span>
+                </div>
+            </div>
+            <!--feed box center | image-->
+            <div class="col-12 feed-box-center mt-3 d-flex align-items-center overflow-hidden">
+                <img src="img/beer.jpg" alt="content" class="img-fluid">
+            </div>
+            <!--feed-box-bot | text-->
+            <div class="col-12 feed-box-bot p-3">
+                <span class="fw-bold mb-1">맥주 맛집🍺✨</span>
+                <span class="f13">맥주는 왜 먹어도 먹어도 맛있을까요?</span>
+            </div>
+            <!--feed box bot | text-->
+            <div class="col-12 feed-box-bot hstack p-3 border-top text-muted f13">
+                <div class="col-6 hstack justify-content-center border-end">
+                    <span>담기</span>
+                </div>
+                <div class="col-6 hstack justify-content-center">
+                    <i class="bi bi-heart"></i>
+                    <span>좋아요</span>
+                    <span class="ms-2">9999+</span>
+                </div>
+            </div>
+        </div>
+    </div><!--row-->
+</div><!--container-->
 
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 </html>
