--- a/src/main/resources/templates/css/feed.css
+++ b/src/main/resources/templates/css/feed.css
@@ -2,13 +2,15 @@
   max-width: 1410px;
 }
 
-.feed-box-Parent{
+#feed span{
+  display: block;
 }
 
+/*feed box style*/
 .feed-box{
   display: inline-block;
   box-sizing: border-box;
-  width: 336px;
+  width: 330px;
   height: 100%;
   margin-bottom: 12px;
   overflow: hidden;
@@ -16,15 +18,13 @@
   box-shadow: 2px 2px 20px rgba(0,0,0,.06),2px 2px 10px rgba(0,0,0,.04)
 }
 
-#feed span{
-  display: block;
-}
-
+/* feed-box (center) */
 .feed-box-center{
   height: 250px;
   object-fit: fill;
 }
 
+/* feed-box (bot) */
 .feed-box-bot{
   background: rgba( 255, 255, 255, 0.85 );
   backdrop-filter: blur( 4px );
@@ -35,18 +35,38 @@
   content: "\e802";
   color: var(--black);
 }
+
 .feed-box-bot div:last-child span:before{
   content: "\F417";
   color: var(--black);
 }
 
 
-/*카드 반응형*/
-/*.card-columns {
-  @include media-breakpoint-only(lg) {
-    column-count: 4;
-  }
-  @include media-breakpoint-only(xl) {
-    column-count: 5;
-  }
-}*/
+/* feed-box (filter)*/
+#feed input[type="checkbox"]{
+}
+
+#feed input[type="checkbox"]+label:hover{
+}
+
+#feed input[type="checkbox"]+label{
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  padding: 4px 8px;
+  background: var(--gray);
+  border:3px solid #707070;
+  margin: 0 4px 8px 0;
+  position: relative;
+}
+
+#feed input[type="checkbox"]+label::after{
+  content:'dsfds✔';
+  font-size: 25px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  top:0;
+}
