--- a/src/main/resources/templates/css/header.css
+++ b/src/main/resources/templates/css/header.css
@@ -34,7 +34,7 @@
 #header .header-inner .header-topMenu .logo-img {
   width: 50px;
   height: 70px;
-  background: url("../img/logo2-white.svg") no-repeat 0 0;
+  background: url("../img/nav/logo2-white.svg") no-repeat 0 0;
   margin-top: 15px;
 }
 
