Docs : feed 페이지 반응형 수정 (미디어쿼리 추가)

--- a/src/main/resources/templates/css/feed.css
+++ b/src/main/resources/templates/css/feed.css
@@ -70,3 +70,9 @@
   left: 0;
   top:0;
 }
+
+/*--------------------------------- 미디어쿼리 ----------------------------------*/
+@media (min-width: 1600px)
+.justify-content-xl-start {
+  justify-content: flex-start!important;
+}
