--- a/src/main/resources/templates/feed/feed.html
+++ b/src/main/resources/templates/feed/feed.html
@@ -19,7 +19,7 @@
 <div id="feed" class="container-fluid mt-4 mb-5">
     <div class="container px-0 pt-4">
         <!--filtering-->
-        <div class="row d-flex justify-content-between px-0">
+        <div class="row-10 d-flex justify-content-between px-0">
             <div class="feed-filter col-8">
                 <button type="button" class="btn rounded-pill px-3 btn-outline-dark">전체</button>
                 <button type="button" class="btn rounded-pill px-3">테마여행 🌴</button>
@@ -78,7 +78,7 @@
     </div>
     <!--feed box Parent-->
     <div class="m-auto">
-        <div class="row d-flex justify-content-center justify-content-xl-start mt-3 m-0">
+        <div class="row d-flex justify-content-center mt-3 m-0">
             <!--feed box Start-->
             <div class="col-3 feed-box my-2 mx-2 px-0">
                 <!--feed box top-->
