테스트 용입니다.

--- a/src/main/resources/templates/test2/nav.html
+++ b/src/main/resources/templates/test2/nav.html
@@ -29,7 +29,7 @@
             <a class="nav-link active" aria-current="page" href="#">홈</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">홍보관</a>
+            <a class="nav-link" href="#">홍보관3</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">피드</a>
