Docs : ai 페이지 추가

--- a/src/main/resources/templates/css/common.css
+++ b/src/main/resources/templates/css/common.css
@@ -11,6 +11,8 @@
 :root{
     --white : #ffffff;
     --beige : #DDCBBE;
+    --deepbeige : #C3A38B;
+    --brown : #78583f;
     --gray : #f7f7f7;
     --deepgray : #f0f0f0;
     --black : #000000;
