--- a/src/main/resources/templates/test2/footer.html
+++ b/src/main/resources/templates/test2/footer.html
@@ -4,7 +4,7 @@
 <footer th:fragment="footer">
 	<hr />
 	<div>
-		<h2>여기는 footerd 영역3</h2>
+		<h2>여기는 footerd 영역 제발</h2>
 	</div>
 </footer>
 <body>
