--- a/src/main/resources/templates/inner/inner.html
+++ b/src/main/resources/templates/inner/inner.html
@@ -15,24 +15,65 @@
             <div class="col text-center">
                 <img src="https://cdn.visitkorea.or.kr/img/call?cmd=VIEW&id=c22a5b87-02b4-4f0c-994a-9234a1ec62ed" alt="" class="img-fluid mx-auto">
                 <p>Lorem ipsum dolor sit amet.</p>
-                <p class="px-5 mx-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, exercitationem ullam autem quaerat nobis unde, aliquam ut magnam odit, laboriosam hic rem ipsa voluptas reprehenderit voluptatum doloremque modi voluptates omnis quos quae a officia. Modi debitis ad deleniti cum ea ipsa provident odit sit dolorum rem sequi fugiat similique eum dolorem aliquid quidem soluta asperiores aspernatur, ducimus commodi eligendi accusamus.</p>
+                <p class="px-lg-5 mx-lg-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, exercitationem ullam autem quaerat nobis unde, aliquam ut magnam odit, laboriosam hic rem ipsa voluptas reprehenderit voluptatum doloremque modi voluptates omnis quos quae a officia. Modi debitis ad deleniti cum ea ipsa provident odit sit dolorum rem sequi fugiat similique eum dolorem aliquid quidem soluta asperiores aspernatur, ducimus commodi eligendi accusamus.</p>
+                <img src="https://korean.visitkorea.or.kr/resources/images/sub/bg_pic_reg.jpg" alt="">
               </div>
         </div>
         <div class="row px-5">
-          <div class="col text-center">
-            <img src="https://cdn.visitkorea.or.kr/img/call?cmd=VIEW&id=c22a5b87-02b4-4f0c-994a-9234a1ec62ed" alt="" class="img-fluid mx-auto">
-            <p>Lorem ipsum dolor sit amet.</p>
-            <p class="px-5 mx-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, exercitationem ullam autem quaerat nobis unde, aliquam ut magnam odit, laboriosam hic rem ipsa voluptas reprehenderit voluptatum doloremque modi voluptates omnis quos quae a officia. Modi debitis ad deleniti cum ea ipsa provident odit sit dolorum rem sequi fugiat similique eum dolorem aliquid quidem soluta asperiores aspernatur, ducimus commodi eligendi accusamus.</p>
-          </div>
-        </div>
-          <!-- 반복 되는 형태 -->
-        <div class="row px-5">
-          <div class="col px-5">
-            <h4 class="px-5 mx-5">여행 정보</h4>
-              <p class="px-5 mx-5">○관련 웹사이트 주소</p>
-              <a href="">해동용궁사</a>
-              <a href="">롯데프리미엄아울렛</a>
-              <a href="">국립부산과학관</a>
+          <div class="col px-5 mx-5">
+            <h4 class="">상세 정보</h4>
+            <hr>
+            <p> Lorem ipsum dolor sit amet, consectetur, adipisicing elit. Voluptate debitis delectus quod incidunt distinctio quis optio dolores iste voluptatum quo saepe repellat ex corrupti tempore, non porro dolorem, tenetur autem neque illum, consequuntur? Pariatur assumenda mollitia repellendus molestiae et tempora, maxime reiciendis amet quae neque nostrum, quisquam? Temporibus, odit, fuga.  </p>
+
+                <div> 지도 들어가는곳</div>
+              <div class="row d-flex">
+                <div class="col">
+                  <ul>
+                  <li>문의 및 안내</li>
+                  <li>이용시간</li>
+                  <li>주차</li>
+                </ul>
+                </div>
+                <div class="col ">
+                  <ul class="list-unstyled">
+                    <li> 041 852 4230</li>
+                    <li>일출~일몰</li>
+                    <li>가능(소형20대)</li>
+                  </ul>
+                </div>
+           
+             
+                  <div class="col d-flex">
+                    <ul >  
+                      <li>주소</li>
+                      <li>휴일</li>
+                    </ul>
+                  </div>
+                  <div class="col ">
+                    <ul class="list-unstyled">  
+                      <li> 충청남도 공주시 계룡면 신원사동길1</li>
+                      <li> 연중무휴</li>
+                    </ul>
+                  </div>
+              </div> 
+             <div class="row">  
+                <div class="col"> 
+                    <button class="btn btn-light">버튼</button>
+                    <button class="btn btn-light">버튼</button>
+                    <button class="btn btn-light">버튼</button>
+                    <button class="btn btn-light">버튼</button>
+                    <button class="btn btn-light">버튼</button>
+                    <button class="btn btn-light">버튼</button>
+                    <button class="btn btn-light">버튼</button>
+                    <button class="btn btn-light">버튼</button>
+                    <button class="btn btn-light">버튼</button>
+                    <button class="btn btn-light">버튼</button>
+                    <button class="btn btn-light">버튼</button>
+                    <button class="btn btn-light">버튼</button>
+                    <button class="btn btn-light">버튼</button>
+                    <button class="btn btn-light">버튼</button>
+                </div>  
+             </div> 
           </div>
         </div>
     </div>
