--- a/src/main/resources/templates/inner/inner.html
+++ b/src/main/resources/templates/inner/inner.html
@@ -16,11 +16,11 @@
                 <img src="https://cdn.visitkorea.or.kr/img/call?cmd=VIEW&id=c22a5b87-02b4-4f0c-994a-9234a1ec62ed" alt="" class="img-fluid mx-auto">
                 <p>Lorem ipsum dolor sit amet.</p>
                 <p class="px-lg-5 mx-lg-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, exercitationem ullam autem quaerat nobis unde, aliquam ut magnam odit, laboriosam hic rem ipsa voluptas reprehenderit voluptatum doloremque modi voluptates omnis quos quae a officia. Modi debitis ad deleniti cum ea ipsa provident odit sit dolorum rem sequi fugiat similique eum dolorem aliquid quidem soluta asperiores aspernatur, ducimus commodi eligendi accusamus.</p>
-                <img src="https://korean.visitkorea.or.kr/resources/images/sub/bg_pic_reg.jpg" alt="">
+                <img class="img-fluid" src="https://korean.visitkorea.or.kr/resources/images/sub/bg_pic_reg.jpg" alt="">
               </div>
         </div>
-        <div class="row px-5">
-          <div class="col px-5 mx-5">
+        <div class="row px-xl-5">
+          <div class="col px-xl-5 mx-xl-5">
             <h4 class="">상세 정보</h4>
             <hr>
             <p> Lorem ipsum dolor sit amet, consectetur, adipisicing elit. Voluptate debitis delectus quod incidunt distinctio quis optio dolores iste voluptatum quo saepe repellat ex corrupti tempore, non porro dolorem, tenetur autem neque illum, consequuntur? Pariatur assumenda mollitia repellendus molestiae et tempora, maxime reiciendis amet quae neque nostrum, quisquam? Temporibus, odit, fuga.  </p>
@@ -56,7 +56,7 @@
                     </ul>
                   </div>
               </div> 
-             <div class="row">  
+             <div class="row mb-5">  
                 <div class="col"> 
                     <button class="btn btn-light">버튼</button>
                     <button class="btn btn-light">버튼</button>
@@ -73,7 +73,27 @@
                     <button class="btn btn-light">버튼</button>
                     <button class="btn btn-light">버튼</button>
                 </div>  
-             </div> 
+             </div>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col text-center mb-5">
+            <h4>해당 여행지가 마음에 드시나요?</h4>
+            <p class="small">평가를 해주시면 개인화 추천 시 활용하여 최적의 여행지를 추천해 드리겠습니다.</p>
+            <button class="btn btn-light">좋아요버튼</button>
+            <button class="btn btn-light">별로에요버튼</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col p-3">
+            <b >여행톡 0</b>
+            <div class="border">
+              <textarea class="form-control" id="" cols="30" rows="10"></textarea>
+              <div class="text-end mt-3">
+              <button class="btn btn-light text-end ">사진올리기</button>
+              <button class="btn btn-primary text-end ">로그인</button>
+            </div>
+            </div>
           </div>
         </div>
     </div>
