--- a/src/main/resources/static/css/feed.css
+++ b/src/main/resources/static/css/feed.css
@@ -43,12 +43,6 @@
 
 
 /* feed-box (filter)*/
-#feed input[type="checkbox"]{
-}
-
-#feed input[type="checkbox"]+label:hover{
-}
-
 #feed input[type="checkbox"]+label{
   width: 50px;
   height: 50px;
@@ -72,7 +66,8 @@
 }
 
 /*--------------------------------- 미디어쿼리 ----------------------------------*/
-@media (min-width: 1600px)
-.justify-content-xl-start {
-  justify-content: flex-start!important;
+@media (min-width: 1600px) {
+	.justify-content-xl-start {
+		justify-content: flex-start !important;
+	}
 }
