--- a/src/main/resources/templates/inner/inner.html
+++ b/src/main/resources/templates/inner/inner.html
@@ -93,6 +93,7 @@
               <button class="btn btn-light text-end ">사진올리기</button>
               <button class="btn btn-primary text-end ">로그인</button>
             </div>
+            <a href="">test</a>
             </div>
           </div>
         </div>
