--- a/src/main/resources/templates/test2/header.html
+++ b/src/main/resources/templates/test2/header.html
@@ -5,7 +5,7 @@
  <nav>
  	<ul>
  	<li><a href="main">홈</a></li>
- 	<li><a href="best">베스트</a></li>
+ 	<li><a href="feed">피드</a></li>
  	<li><a href="bestProducts">베스트 제품들</a></li>
  	<li><a href="board">고객 게시판3</a></li>
  	<li><a href="login">로그인</a></li>
