24/02/06 이지후 - 파비콘 추가

--- a/src/main/resources/templates/feed/feed.html
+++ b/src/main/resources/templates/feed/feed.html
@@ -14,12 +14,13 @@
             async></script>
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/feed.css">
+      <link rel="icon" href="../img/logo2.ico" />
 </head>
 <body>
 <div id="feed" class="container-fluid mt-4 mb-5">
-    <div class="container px-0 pt-4">
+    <div class=" px-2 pt-4">
         <!--filtering-->
-        <div class="row d-flex justify-content-between px-0">
+        <div class="row px-0">
             <div class="feed-filter col-8">
                 <button type="button" class="btn rounded-pill px-3 btn-outline-dark">전체</button>
                 <button type="button" class="btn rounded-pill px-3">테마여행 🌴</button>
@@ -78,9 +79,9 @@
     </div>
     <!--feed box Parent-->
     <div class="m-auto">
-        <div class="row d-flex justify-content-center justify-content-xl-start mt-3 m-0">
+        <div class="row justify-content-center justify-content-xl-start mt-3 m-0 row-cols-xl-3 row-cols-3">
             <!--feed box Start-->
-            <div class="col-3 feed-box my-2 mx-2 px-0">
+            <div class="col feed-box my-2 mx-2 px-0">
                 <!--feed box top-->
                 <div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
                     <div class="col">
@@ -123,7 +124,7 @@
                 </div>
             </div>
             <!---------------------------------------------------------------------------->
-            <div class="col-3 feed-box my-2 mx-2 px-0">
+            <div class="col feed-box my-2 mx-2 px-0">
                 <!--feed box top-->
                 <div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
                     <div class="col">
@@ -171,7 +172,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3 feed-box my-2 mx-2 px-0">
+            <div class="col feed-box my-2 mx-2 px-0">
                 <!--feed box top-->
                 <div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
                     <div class="col">
@@ -211,7 +212,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3 feed-box my-2 mx-2 px-0">
+            <div class="col feed-box my-2 mx-2 px-0">
                 <!--feed box top-->
                 <div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
                     <div class="col">
@@ -251,7 +252,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3 feed-box my-2 mx-2 px-0">
+            <div class="col feed-box my-2 mx-2 px-0">
                 <!--feed box top-->
                 <div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
                     <div class="col">
@@ -291,7 +292,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-3 feed-box my-2 mx-2 px-0">
+            <div class="col feed-box my-2 mx-2 px-0">
                 <!--feed box top-->
                 <div class="col-12 hstack feed-box-top pt-3 ps-3 z-3">
                     <div class="col">
