--- a/src/main/resources/static/css/feed.css
+++ b/src/main/resources/static/css/feed.css
@@ -5,13 +5,11 @@
 #feed span{
   display: block;
 }
-
 /*feed box style*/
 .feed-box{
-  display: inline-block;
+display:inline-block;
   box-sizing: border-box;
   width: 330px;
-  height: 100%;
   margin-bottom: 12px;
   overflow: hidden;
   border-radius: 12px;
@@ -32,12 +30,13 @@
 }
 
 .feed-box-bot div:first-child span:before{
-  content: "\e802";
+  content: "🧳";
   color: var(--black);
+  width: 10px;
 }
 
-.feed-box-bot div:last-child span:before{
-  content: "\F417";
+.feed-box-bot div:last-child span+span:before{
+  content: "❤";
   color: var(--black);
 }
 
@@ -70,3 +69,51 @@
   left: 0;
   top:0;
 }
+
+
+@media (min-width: 1124px) {
+  .card-columns {
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 4;
+    -webkit-column-gap: 1.25rem;
+    -moz-column-gap: 1.25rem;
+    column-gap: 1.25rem;
+    orphans: 1;
+    widows: 1;
+  }
+  .card-columns .card {
+    display: inline-block;
+    width: 100%;
+  }
+}
+@media screen and (min-width:1100px) and (max-width:1424px){
+	.row-box{
+		max-width: 1100px;
+		margin:0 auto !important;
+		column-count: 3;
+	}
+}
+@media screen and (min-width:760px) and (max-width:1099px){
+	.card-columns{
+	column-count: 2;
+	max-width: 720px;
+	margin:0 auto !important;
+	}	
+}
+@media screen and (max-width:759px){
+	.card-columns{
+	column-count: 1;
+	max-width: 330px;
+	margin:0 auto !important;
+	}	
+}
+.hstack{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	align-self: stretch;
+}
+/* .pe-2{
+	padding-right: 0.5rem!important;
+} */
