--- a/src/main/resources/templates/nav/nav.html
+++ b/src/main/resources/templates/nav/nav.html
@@ -1,71 +1,70 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Nav</title>
-  <!--<link rel="stylesheet" href="../css/bootstrap.css">-->
-  <link rel="stylesheet" href="../css/common.css">
-  <link rel="stylesheet" href="../css/header.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Title</title>
+  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/navbar.css">
   <script src="https://unpkg.com/feather-icons"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
-<header id="header" class="main">
-  <div class="header-inner">
-    <div class="header-topMenu">
-      <a href="#" class="indent">logo<h1 class="logo-img"></h1></a>
-      <div class="header-leftBox">
-        <a class="icon-text" href="#"><i data-feather="sun">sun</i>날씨</a>
-        <a class="icon-text" href="#"><i data-feather="map-pin">map-pin</i>지도</a>
-        <!--<a class="icon-text" href="#"><i data-feather="sunset">sunset</i>날씨</a>-->
-        <!--<a class="icon-text" href="#"><i data-feather="sunrise">sunrise</i>날씨</a>-->
-        <!--<a class="icon-text" href="#"><i data-feather="wind">wind</i>날씨</a>-->
-        <!--<a class="icon-text" href="#"><i data-feather="cloud">cloud</i>날씨</a>-->
-        <!--<a class="icon-text" href="#"><i data-feather="cloud-snow">cloud-snow</i>날씨</a>-->
-        <!--<a class="icon-text" href="#"><i data-feather="cloud-rain">cloud-rain</i>날씨</a>-->
-        <!--<a class="icon-text" href="#"><i data-feather="cloud-lightning">cloud-lightning</i>날씨</a>-->
-      </div>
-      <div class="header-rightBox">
-        <a class="icon-text" href="#"><i data-feather="search">search</i>검색</a>
-        <a class="icon-text" href="#"><i data-feather="log-in">login</i>로그인</a>
-        <!--<a class="icon-text" href="#"><i data-feather="log-out">logout</i>로그아웃</a>-->
-      </div>
+<!--nav-->
+<header>
+  <div class="navbar">
+    <div class="carrier-logo">
+      <a href="">
+        <img src="img/logo2-white.svg" alt="" class="logo-img-white">
+        <img src="img/logo2.svg" alt="" class="logo-img-black cs-dnone">
+      </a>
+    </div>
+    <ul class="links">
+      <li class="carrier-home"><a href="" class="text-change">홈</a></li>
+      <li class="carrier-feed"><a href="" class="text-change">피드</a></li>
+      <li class="carrier-information"><a href="" class="text-change">정보</a></li>
+      <li class="carrier-ai"><a href="" class="text-change">AI 추천</a></li>
+      <li class="carrier-band"><a href="" class="text-change">소모임</a></li>
+    </ul>
+    <ul class="sub-links">
+      <li><a class="icon-text" href="#"><i data-feather="map-pin">map-pin</i></a></li>
+      <li><a class="icon-text" href="#"><i data-feather="search">search</i></a></li>
+      <!--<li><a class="icon-text" href="#"><i data-feather="user">user</i></a></li>-->
+      <li><a class="icon-text" href="#"><i data-feather="log-in">login</i></a></li>
+    </ul>
+    <div class="toggle-btn">
+      <i class="fa-solid fa-bars"></i>
     </div>
   </div>
-</header>
-<nav class="nav-menu">
-  <ul>
-    <li><a href="">HOME</a></li>
-    <li><a href="">피드</a></li>
-    <li><a href="">정보</a></li>
-    <li><a href="">AI 추천</a></li>
-    <li><a href="">소모임</a></li>
-  </ul>
-</nav>
 
-<div class="main-container">
-  <div class="inner">
-    <section class="section01">
-
-      <div class="bottom-menu">
-        <ul>
-          <li><span>피드</span></li>
-          <li><span>정보</span></li>
-          <li><span>AI 추천</span></li>
-          <li><span>소모임</span></li>
-        </ul>
-      </div>
-
-      <div class="bg-video-section">
-        <video autoplay loop muted playsinline src="../video/main1.mov" class="bg-video"></video>
-      </div>
-    </section>
+  <!--mobile dropdown-->
+  <div class="nav-dropdown-menu">
+    <ul>
+      <li class="carrier-home"><a href="">홈</a></li>
+      <li class="carrier-feed"><a href="">피드</a></li>
+      <li class="carrier-information"><a href="">정보</a></li>
+      <li class="carrier-ai"><a href="">AI 추천</a></li>
+      <li class="carrier-band"><a href="">소모임</a></li>
+      <li><a class="icon-dropdown-text" href="#"><i data-feather="map-pin">map-pin</i><span>지도 보기</span></a></li>
+      <li><a class="icon-dropdown-text" href="#"><i data-feather="search">search</i><span>검색 하기</span></a></li>
+      <li><a class="icon-dropdown-text" href="#"><i data-feather="log-in">login</i><span>로그인 하기</span></a></li>
+      <!--<li><a class="icon-dropdown-text" href="#"><i data-feather="user">user</i><span>마이페이지</>span></a></li>-->
+    </ul>
   </div>
-</div>
-
-
+</header>
+<script src="js/nav.js"></script>
 <script>
-  feather.replace()
+  const toggleBtn = document.querySelector('.toggle-btn')
+  const toggleIcon = document.querySelector('.toggle-btn i')
+  const dropdown = document.querySelector('.nav-dropdown-menu')
+
+  toggleBtn.onclick = function () {
+    dropdown.classList.toggle('open')
+    const isOpen = dropdown.classList.contains('open')
+
+    toggleIcon.classList = isOpen
+      ? 'fa-solid fa-xmark' : 'fa-solid fa-bars'
+  }
 </script>
 </body>
 </html>
