--- a/src/main/resources/templates/info/info.html
+++ b/src/main/resources/templates/info/info.html
@@ -39,7 +39,7 @@
 								<!--board-->
 								<div class="row">
 									<div class="col-3 board-left">
-										<img src="../img/ai/theme-cafe.jpg" class="img-fluid" alt="">
+										<img src="../img/aicc/theme-cafe.jpg" class="img-fluid" alt="">
 										<span class="text-white f12">포레스트</span>
 									</div>
 									<div class="col">
@@ -68,7 +68,7 @@
 								<!--board-->
 								<div class="row">
 									<div class="col-3 board-left">
-										<img src="../img/ai/theme-park.jpg" class="img-fluid" alt="">
+										<img src="../img/aicc/theme-park.jpg" class="img-fluid" alt="">
 										<span class="text-white f12">놀이공원</span>
 									</div>
 									<div class="col">
@@ -97,7 +97,7 @@
 								<!--board-->
 								<div class="row">
 									<div class="col-3 board-left">
-										<img src="../img/ai/theme-park.jpg" class="img-fluid" alt="">
+										<img src="../img/aicc/theme-park.jpg" class="img-fluid" alt="">
 										<span class="text-white f12">놀이공원</span>
 									</div>
 									<div class="col">
@@ -126,7 +126,7 @@
 								<!--board-->
 								<div class="row">
 									<div class="col-3 board-left">
-										<img src="../img/ai/theme-park.jpg" class="img-fluid" alt="">
+										<img src="../img/aicc/theme-park.jpg" class="img-fluid" alt="">
 										<span class="text-white f12">놀이공원</span>
 									</div>
 									<div class="col">
@@ -155,7 +155,7 @@
 								<!--board-->
 								<div class="row">
 									<div class="col-3 board-left">
-										<img src="../img/ai/theme-park.jpg" class="img-fluid" alt="">
+										<img src="../img/aicc/theme-park.jpg" class="img-fluid" alt="">
 										<span class="text-white f12">놀이공원</span>
 									</div>
 									<div class="col">
@@ -184,7 +184,7 @@
 								<!--board-->
 								<div class="row">
 									<div class="col-3 board-left">
-										<img src="../img/ai/theme-park.jpg" class="img-fluid" alt="">
+										<img src="../img/aicc/theme-park.jpg" class="img-fluid" alt="">
 										<span class="text-white f12">놀이공원</span>
 									</div>
 									<div class="col">
