--- a/src/main/resources/templates/test2/header.html
+++ b/src/main/resources/templates/test2/header.html
@@ -4,11 +4,11 @@
 <header th:fragment="header">
  <nav>
  	<ul>
- 	<li><a href="main">홈</a></li>
+ 	<li><a href="home">홈</a></li>
  	<li><a href="feed">피드</a></li>
- 	<li><a href="bestProducts">베스트 제품들</a></li>
- 	<li><a href="board">고객 게시판3</a></li>
- 	<li><a href="login">로그인</a></li>
+ 	<li><a href="info">정보</a></li>
+ 	<li><a href="band">band</a></li>
+ 	<li><a href="mypage">mypage</a></li>
  	</ul>
  </nav>
 </header>
