--- a/src/main/resources/templates/band/band_write.html
+++ b/src/main/resources/templates/band/band_write.html
@@ -12,13 +12,15 @@
 <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
 <script src="../js/band_write.js"></script>
-<link rel="stylesheet" href="../css/band_write_form.css">
+<link rel="stylesheet" href="../css/band_write.css">
 </head>
 <body>
-    <div class="band_write_form">
-        <form method="post">
-            <textarea id="summernote" name="editordata" rows="100"></textarea>
-        </form>
+    <div class="band_write_wrapper">
+        <div class="band_write_form">
+            <form method="post">
+                <textarea id="summernote" name="editordata" rows="100"></textarea>
+            </form>
+        </div>
     </div>
 </body>
 
