--- a/src/main/resources/templates/map/map.html
+++ b/src/main/resources/templates/map/map.html
@@ -1,10 +1,60 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>캐리어</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/map.css">
+    <link rel="stylesheet" href="../css/map_mediaQuery.css">
+    <script src="../js/map.js"></script>
+    
+</head>
+
+<body>
+    <div class="map_wrapp">
+
+        <!-- map 왼쪽 가이드 영역 -->
+        <div class="map_guide">
+            <!-- gps 현재 위치 출력 영역 -->
+            <div class="row map_curr_locationBox">
+                <div class="col map_curr_location d-flex justify-content-between">
+                    <div class="map_curr_location_name">
+                        <span>경기 수원시 권선구</span>
+                    </div>
+                    <div class="map_curr_location_weather d-flex ">
+                        <span>현재날씨 </span>
+                        <em>최고 | 최저</em>
+                    </div>
+                </div>
+            </div>  <!-- map_curr_locationBox -->
+        </div>
+
+
+        <!-- 지도를 표시할 div 입니다 -->
+        <div id="map" style="width:100%;height:350px;"></div>
+    </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	5bceb465ea8b2b4878f8bec64e4f6d05"></script>
+    <script>
+        var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+            mapOption = { 
+                center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+                level: 3 // 지도의 확대 레벨
+            };
+        
+        // 지도를 표시할 div와  지도 옵션으로  지도를 생성합니다
+        var map = new kakao.maps.Map(mapContainer, mapOption); 
+    </script>
 </body>
+
 </html>
