--- a/src/main/resources/templates/nav/nav.html
+++ b/src/main/resources/templates/nav/nav.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,46 +10,44 @@
   <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
-<nav class="mt-3 mb-0 navbar navbar-expand-md d-flex justify-content-center">
+<nav class="mt-3 mb-0 navbar navbar-expand-md d-flex justify-content-center" th:fragment="nav">
   <div class="row container-fluid">
     <!-- Logo 좌측 -->
     <a class="col navbar-brand" href="#">CarrierLogo</a>
     <!--M nav btn-->
-    <button class="col-2 ml-auto navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="col-2 ml-auto navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <!-- nav content -->
-    <div class="col-10 d-flex justify-content-between justify-content-lg-end mx-auto collapse navbar-collapse"
+    <div class="col-10 d-lg-flex justify-content-between justify-content-lg-end mx-auto collapse navbar-collapse"
          id="navbarSupportedContent">
       <!-- nav 중앙 -->
       <div class="col px-md-4">
         <ul class="px-5 mb-0 navbar-nav justify-content-around mb-lg-0 f17">
           <li class="nav-item active">
-            <a class="nav-link" aria-current="page" href="#">홈</a>
+            <a class="nav-link" aria-current="page" href="home">홈</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">피드</a>
+            <a class="nav-link" href="feed">피드</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">AI콕콕</a>
+            <a class="nav-link" href="aicc">AI콕콕</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">홍보관</a>
+            <a class="nav-link" href="pak">홍보관</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">여행정보</a>
+            <a class="nav-link" href="info">여행정보</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">지도</a>
+            <a class="nav-link" href="map">지도</a>
           </li>
         </ul>
       </div>
       <!-- nav 우측 -->
-      <div class="col-lg-4 nav-right me-3 d-flex align-items-center">
+      <div class="col-lg-4 nav-right me-3 d-flex align-items-center p-0">
         <!-- lg 화면 이상에서 보일 영역 -->
-        <div class="col d-none d-lg-block d-flex align-items-center">
+        <div class="col d-none d-lg-block d-flex align-items-center p-0">
           <a href="#" class="float-end nav-right-btn navbar-user mt-1">user</a>
           <!-- 서치 영역-->
           <div class="col-10 float-end nav-search-form">
