--- a/src/main/resources/templates/map/map.html
+++ b/src/main/resources/templates/map/map.html
@@ -16,26 +16,71 @@
 
 <body>
     <div class="map_wrapp">
+        <!-- 맵 컨텐츠 전체를 감싸는 영역  -->
+        <div class="map_all_contentBox">
+                <!-- map 왼쪽 가이드 영역 -->
+            <div class="map_guide">
+                <!-- gps 현재 위치 출력 영역 -->
+                <div class="map_curr_locationBox">
+                    <div class="col map_curr_location d-flex justify-content-between">
+                        <div class="map_curr_location_name">
+                            <span>경기 수원시 권선구</span>
+                        </div>
+                        <div class="map_curr_location_weather d-flex">
+                            <span>현재날씨 </span>
+                            <em>최고 | 최저</em>
+                        </div>
+                    </div>
+                </div>  <!-- map_curr_locationBox -->
 
-        <!-- map 왼쪽 가이드 영역 -->
-        <div class="map_guide">
-            <!-- gps 현재 위치 출력 영역 -->
-            <div class="row map_curr_locationBox">
-                <div class="col map_curr_location d-flex justify-content-between">
-                    <div class="map_curr_location_name">
-                        <span>경기 수원시 권선구</span>
+                <!-- map guide 아이콘 영역 -->
+                <div class="map_guide_iconBox">
+                    <div class="map_guide_icon">
+                        <ul class="map_guide_icon_list px-0">
+                            <li class="map_guide_icon_item map_icon_near_trip">
+                                주변여행지
+                            </li>
+                            <li class="map_guide_icon_item map_icon_food">
+                                음식점
+                            </li>
+                            <li class="map_guide_icon_item map_icon_cafe">
+                                카페
+                            </li>
+                            <li class="map_guide_icon_item map_icon_hotel">
+                                숙소
+                            </li>
+                            <li class="map_guide_icon_item map_icon_park">
+                                주차장
+                            </li>
+                            <li class="map_guide_icon_item map_icon_electric_charg">
+                                전기차충전소
+                            </li>
+                            <li class="map_guide_icon_item map_icon_recomand_thema">
+                                추천테마
+                            </li>
+                            <li class="map_guide_icon_item map_icon_trip_course">
+                                여행코스
+                            </li>
+                            <li class="map_guide_icon_item map_icon_myTrip">
+                                나의여행
+                            </li>
+                            <li class="map_guide_icon_item map_icon_set">
+                                설정
+                            </li>
+                        </ul>
                     </div>
-                    <div class="map_curr_location_weather d-flex ">
-                        <span>현재날씨 </span>
-                        <em>최고 | 최저</em>
-                    </div>
-                </div>
-            </div>  <!-- map_curr_locationBox -->
+                </div> 
+
+                <!-- 지역별 피드 출력 영역 -->
+                
+            </div> <!-- map_guide -->
+
+            <div class="map_mapSection">
+                <!-- 지도를 표시할 div 입니다 -->
+                <div id="map"></div>
+            </div>
         </div>
-
-
-        <!-- 지도를 표시할 div 입니다 -->
-        <div id="map" style="width:100%;height:350px;"></div>
+        
     </div>
 
 
