--- a/src/main/resources/templates/info/info.html
+++ b/src/main/resources/templates/info/info.html
@@ -11,8 +11,10 @@
 	crossorigin="anonymous">
 <link rel="stylesheet" href="../css/common.css">
 <link rel="stylesheet" href="../css/info.css">
+<link rel="stylesheet" href="../css/nav.css">
 </head>
 <body>
+	<div th:replace="nav/nav::nav"></div>
 	<div id="info" class="container-fluid mt-4 mb-5">
 		<div class="container px-0 pt-4">
 			<div class="row">
