--- a/src/main/resources/templates/nav/nav.html
+++ b/src/main/resources/templates/nav/nav.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
-<nav class="mt-3 mb-0 navbar navbar-expand-md d-flex justify-content-center" th:fragment="nav">
+<nav class="mt-3 mb-0 navbar navbar-expand-md d-flex justify-content-center sticky-top bg-white" th:fragment="nav">
   <div class="row container-fluid">
     <!-- Logo 좌측 -->
-    <a class="col navbar-brand" href="#">CarrierLogo</a>
+    <a class="col navbar-brand" href="home"> <img src="../img/nav/carrier.jpg" alt="" class="w-100 mb-2"></a>
     <!--M nav btn-->
     <button class="col-2 ml-auto navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -24,17 +24,17 @@
       <!-- nav 중앙 -->
       <div class="col px-md-4">
         <ul class="px-5 mb-0 navbar-nav justify-content-around mb-lg-0 f17">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" aria-current="page" href="home">홈</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="feed">피드</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="aicc">AI콕콕</a>
+            <a class="nav-link" href="aicc">AI 돋보기</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pak">홍보관</a>
+            <a class="nav-link" href="band">밴드</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="info">여행정보</a>
