--- a/src/main/resources/templates/footer/footer.html
+++ b/src/main/resources/templates/footer/footer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
-<footer>
+<footer th:fragment="footer">
 <div class="waves">
   <div class="wave" id="wave1"></div>
   <div class="wave" id="wave2"></div>
