--- a/src/main/resources/templates/nav/nav.html
+++ b/src/main/resources/templates/nav/nav.html
@@ -13,7 +13,7 @@
 <nav class="mt-3 mb-0 navbar navbar-expand-md d-flex justify-content-center sticky-top bg-white" th:fragment="nav">
   <div class="row container-fluid">
     <!-- Logo 좌측 -->
-    <a class="col navbar-brand" href="home"> <img src="../img/nav/carrier.jpg" alt="" class="w-100 mb-2"></a>
+ <a class="col navbar-brand" href="home"> <img src="../img/nav/carrier.jpg" alt="" class="mb-2" style="width: 100px;"></a>
     <!--M nav btn-->
     <button class="col-2 ml-auto navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -48,7 +48,7 @@
       <div class="col-lg-4 nav-right me-3 d-flex align-items-center p-0">
         <!-- lg 화면 이상에서 보일 영역 -->
         <div class="col d-none d-lg-block d-flex align-items-center p-0">
-          <a href="#" class="float-end nav-right-btn navbar-user mt-1">user</a>
+          <a href="#" class="float-end nav-right-btn navbar-user mt-3">user</a>
           <!-- 서치 영역-->
           <div class="col-10 float-end nav-search-form">
             <form class="d-flex align-items-center" role="search">
