--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -7,11 +7,32 @@
 	<title>캐리어</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+	<!--파비콘영역-->
+	<link rel="apple-touch-icon" sizes="57x57" href="../img/favicon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="../img/favicon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="../img/favicon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="../img/favicon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="../img/favicon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="../img/favicon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="../img/favicon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="../img/favicon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="../img/favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="../img/favicon/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+	<!--파비콘영역 끝-->
 	<link rel="stylesheet" href="../css/common.css">
 	<link rel="stylesheet" href="../css/nav.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.css" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/carousel/carousel.autoplay.css" />
 	<link rel="stylesheet" href="../css/home.css">
+	<link rel="stylesheet" href="../css/search.css">
+	<link rel="stylesheet" href="../css/footer.css">
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script src="../js/home.js"></script>
 </head>
@@ -328,8 +349,8 @@
 
 				<div class="home_dl_content">
 					<!-- 컨텐츠 별 설명 영역 -->
-					<div class="row py-3">
-						<div class="col d-flex justify-content-center py-3 dl_ment">
+					<div class="row py-3 me-0">
+						<div class="col d-flex justify-content-center py-3 dl_ment ">
 							<img src="../img/home/main/icon_curation_txt.png" alt="#">
 							<span>다양한 취향! 다른사람들의 여행을 함께 구경해요! </span>
 							<span>빅데이터 정보로 분선한 지역별 핫한 여행지와 맛집을 소개합니다.</span>
@@ -560,7 +581,7 @@
 
 
 					<!-- AI콕콕 플래너 영역 -->
-				<!--	<div class="home_dl_img_AIPlaner">
+					<!--	<div class="home_dl_img_AIPlaner">
 						<ul class="aiPlaner_list px-0 ">
 							<li class="pb-3"><a href="#">
 									<span class="best"></span>
@@ -676,7 +697,7 @@
 				</div> <!-- home_dl_imgBox -->
 
 				<!-- datalab 컨텐츠 새로고침 버튼 영역 -->
-				<div class="row dl_refresh_buttonBox py-3">
+				<div class="row dl_refresh_buttonBox py-3 me-0">
 					<div class="col mt-4">
 						<div class="dl_refresh_button mx-auto">
 							<img class="img-fluid" src="../img/home/main/btn_curation_refresh.png" alt="#">
@@ -699,22 +720,80 @@
 
 	<section class="home_info_data container my-5">
 		<div class="row home_info_data_wrap text-center">
-			<div class="col-12 col-lg-6 home_info_data_img p-lg-5">
+			<div class="col-12 col-lg-6 home_info_data_img py-lg-5">
 				<img src="../img/home/main/home_info_data_img.png" class="rounded ">
 			</div><!--home_info_data_img-->
-			<div class="col-12 col-lg-6 home_info_data_text text-start p-lg-5 ps-5 mt-5 mt-lg-0 ms-4 ms-lg-0">
-				<div class="fs-4 fw-bold"><a href="info" class="text-dark">오늘의 여행 소식</a></div>
-				<div class="fs-5 my-2 border-bottom pb-3"><a href="" class="text-dark ">2024 여행 가는 달 | 대한민국 숙박 세일 페스타</a></div>
-				<div class="fs-5 my-2 border-bottom pb-3"><a href="" class="text-dark">캐리어 기자단 | '다님' 9기 모집</a></div>
-				<div class="fs-5 my-2 border-bottom pb-3"><a href="" class="text-dark">캐리어 대학생 기자단 | '트래블리더' 16기 모집</a></div>
-				<div class="fs-5 my-2 border-bottom pb-3"><a href="" class="text-dark">2024 제9기 영남 알프스 학교 수강생 모집</a></div>
+			<div class="col-12 col-lg-6 home_info_data_text text-start py-lg-5 mt-5 mt-lg-0 ms-lg-0 px-0">
+				<div class="fs-4 fw-bold"><a href="info" class="text-dark ps-5">오늘의 여행 소식</a></div>
+				<div class="fs-5 my-2 border-bottom pb-3"><a href="" class="text-dark ps-5">2024 여행 가는 달 | 대한민국 숙박 세일
+						페스타</a></div>
+				<div class="fs-5 my-2 border-bottom pb-3"><a href="" class="text-dark ps-5">캐리어 기자단 | '다님' 9기 모집</a>
+				</div>
+				<div class="fs-5 my-2 border-bottom pb-3"><a href="" class="text-dark ps-5">캐리어 대학생 기자단 | '트래블리더' 16기
+						모집</a></div>
+				<div class="fs-5 my-2 border-bottom pb-3"><a href="" class="text-dark ps-5">2024 제9기 영남 알프스 학교 수강생
+						모집</a></div>
 			</div><!--home_info_data_text-->
 		</div><!--home_info_data_wrap-->
 	</section><!--home_info_data-->
 
+	<!--<h1 class="mx-5 pt-5">Search</h1>-->
+	<div class="row search-box-parent p-sm-4 p-md-5 me-0">
+		<!-- 검색 (좌) -->
+		<div class="col-12 col-lg-7 mx-auto rounded-4 p-sm-1 p-md-2 pe-lg-1">
+			<!-- 검색 창 -->
+			<form action="#" class="d-flex align-items-center justify-content-end">
+				<input type="search" name="" id="" class="border-0 bg-blur shadow-sm">
+				<svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor"
+					class="bi bi-search position-absolute z-3 me-4" viewBox="0 0 16 16">
+					<path
+						d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+				</svg>
+			</form>
+			<!--최근 검색-->
+			<div class="col-12 mt-sm-3 mt-lg-5 p-4 rounded-4 search-history bg-blur shadow-sm">
+				<p class="pb-3 fw-bold">최근 검색</p>
+				<div class="text-muted px-3 mb-4">
+					<button type="button" class="btn btn-light rounded-pill px-3 p-2 mb-2">제주도</button>
+					<button type="button" class="btn btn-light rounded-pill px-3 p-2 mb-2">독도</button>
+					<button type="button" class="btn btn-light rounded-pill px-3 p-2 mb-2">여수</button>
+				</div>
+				<hr>
+				<span class="text-center d-block text-muted f13">전체 삭제</span>
+			</div>
+			<!--실시간 인기순위-->
+			<div class="col-12 mt-sm-3 mt-lg-5  p-4 rounded-4 search-history bg-blur shadow-sm">
+				<p class="fw-bold">실시간 인기 검색</p>
+				<div class="px-1 mb-3">
+					<ol>
+						<li class="p-1 py-2"><span>1.</span> 수원</li>
+						<li class="p-1 py-2"><span>2.</span> 방화수류정</li>
+						<li class="p-1 py-2"><span>3.</span> 호수</li>
+						<li class="p-1 py-2"><span>4.</span> 광교</li>
+					</ol>
+				</div>
+			</div>
+		</div>
+		<!-- (우) -->
+		<div
+			class="col-12 col-lg-4 p-4 mt-sm-3 mt-5 mt-lg-0  search-img-parent mx-auto bg-white rounded-4 p-sm-3 p-md-4 shadow-sm">
+			<strong class="d-block mb-3">원하는 여행지를 찾지 못하셨나요?</strong>
+			<span class="badge rounded-pill text-bg-info text-white mb-1">AD</span>
+			<!--AD 이미지-->
+			<img src="../img/home/main/adimg.jpeg" class="img-fluid rounded-4" alt="">
+			<div class="d-flex align-items-center search-img mb-4">
+				<i class="fa-solid fa-location-dot float-start me-2"></i>
+				<span class="float-start">외도 보타니아</span>
+			</div>
+		</div>
+	</div>
+	</div>
+	</section>
 
 
 	</div> <!-- home_wrapper -->
+	<!--footer-->
+	<div th:replace="footer/footer::footer"></div>
 
 
 
