--- a/src/main/resources/templates/footer/footer.html
+++ b/src/main/resources/templates/footer/footer.html
@@ -23,11 +23,12 @@
     <li><a href=""><i data-feather="youtube"></i></a></li>
   </ul>
   <ul class="footer-menu">
-    <li><a href="">홈</a></li>
-    <li><a href="">피드</a></li>
-    <li><a href="">정보</a></li>
-    <li><a href="">AI 추천</a></li>
-    <li><a href="">소모임</a></li>
+    <li><a href="home">홈</a></li>
+    <li><a href="feed">피드</a></li>
+    <li><a href="aicc">AI 돋보기</a></li>
+    <li><a href="band">밴드</a></li>
+    <li><a href="info">여행정보</a></li>
+      <li><a href="map">지도</a></li>
   </ul>
   <p>&COPY; green computer | 16th gajo</p>
 </footer>
