--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -7,7 +7,7 @@ footer {
   position: relative;
   width: 100%;
   margin-top: 10%;
-  background: #e7dbd1;
+  background: var(--main);
   min-height: 100px;
   padding: 20px 50px;
   display: flex;
