--- a/src/main/resources/templates/nav/nav.html
+++ b/src/main/resources/templates/nav/nav.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/nav.css">
+<!--   <link rel="stylesheet" href="css/nav.css"> -->
 </head>
 <body>
 <nav class="mt-3 mb-0 navbar navbar-expand-md d-flex justify-content-center sticky-top bg-white" th:fragment="nav">
@@ -47,19 +47,19 @@
       <!-- nav 우측 -->
       <div class="col-lg-4 nav-right me-3 d-flex align-items-center p-0">
         <!-- lg 화면 이상에서 보일 영역 -->
-        <div class="col d-none d-lg-block d-flex align-items-center p-0">
-          <a href="#" class="float-end nav-right-btn navbar-user mt-3">user</a>
+        <div class="col d-none d-lg-flex d-flex align-items-center p-0">
           <!-- 서치 영역-->
           <div class="col-10 float-end nav-search-form">
             <form class="d-flex align-items-center" role="search">
-              <input class="form-control me-2" type="search" placeholder="어디로, 어떤 여행을 떠날 예정인가요?" aria-label="Search">
+              <input class="form-control" type="search" placeholder="어디로, 어떤 여행을 떠날 예정인가요?" aria-label="Search">
               <button class="nav-right-btn navbar-search-lg" type="submit">Search</button>
             </form>
           </div>
+          <a href="login" class="float-end nav-right-btn navbar-user  ms-3">user</a>
         </div>
         <!-- md 화면에서만 보일 영역 -->
         <div class="col d-none d-md-block d-lg-none">
-          <a href="#" class="float-end nav-right-btn navbar-user">user</a>
+          <a href="login" class="float-end nav-right-btn navbar-user">user</a>
           <a href="#" class="float-end nav-right-btn navbar-search-md">search</a>
         </div>
       </div>
