--- a/src/main/resources/templates/thymeleaf/info/info.html
+++ b/src/main/resources/templates/thymeleaf/info/info.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="../css/common.css">
 <link rel="stylesheet" href="../css/info.css">
 <link rel="stylesheet" href="../css/nav.css">
+<link rel="stylesheet" href="../css/footer.css">
 
 <!-- 파비콘 영역 -->
 	<link rel="apple-touch-icon" sizes="57x57" href="../img/favicon/apple-icon-57x57.png">
@@ -286,7 +287,7 @@
 			</div>
 		</div>
 	</div>
-
+	<div th:replace="footer/footer::footer"></div>
 
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
